<resources>
    <string name="app_name">TuneBox</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="Favourites_btn">Favourites</string>
    <string name="playList_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_name">song name</string>
    <string name="back_button">back button</string>
    <string name="fav_btn">fav_btn</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nTune Box</string>
    <string name="feedback">Feedback</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="song_album">Song Album</string>
</resources>